outputs_20260331-043038-52495341/codegen/production/build_logs/compiler_stderr.log
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c: In function 'GTM_TOM_3_Phase_Inverter_PWM_init':
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c:34:37: error: 'IfxGtm_TOM1_2_TOUT12_P00_3_OUT' undeclared (first use in this function)
   34 | #define PHASE_U_HS                (&IfxGtm_TOM1_2_TOUT12_P00_3_OUT)  /* U high-side:  TOM1 CH2 -> P00.3 */
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c:93:61: note: in expansion of macro 'PHASE_U_HS'
   93 |     output[0].pin                    = (IfxGtm_Pwm_ToutMap*)PHASE_U_HS;
      |                                                             ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c:34:37: note: each undeclared identifier is reported only once for each function it appears in
   34 | #define PHASE_U_HS                (&IfxGtm_TOM1_2_TOUT12_P00_3_OUT)  /* U high-side:  TOM1 CH2 -> P00.3 */
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c:93:61: note: in expansion of macro 'PHASE_U_HS'
   93 |     output[0].pin                    = (IfxGtm_Pwm_ToutMap*)PHASE_U_HS;
      |                                                             ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c:35:37: error: 'IfxGtm_TOM1_1_TOUT11_P00_2_OUT' undeclared (first use in this function)
   35 | #define PHASE_U_LS                (&IfxGtm_TOM1_1_TOUT11_P00_2_OUT)  /* U low-side:   TOM1 CH1 -> P00.2 */
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c:94:61: note: in expansion of macro 'PHASE_U_LS'
   94 |     output[0].complementaryPin       = (IfxGtm_Pwm_ToutMap*)PHASE_U_LS;
      |                                                             ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c:36:37: error: 'IfxGtm_TOM1_4_TOUT14_P00_5_OUT' undeclared (first use in this function)
   36 | #define PHASE_V_HS                (&IfxGtm_TOM1_4_TOUT14_P00_5_OUT)  /* V high-side:  TOM1 CH4 -> P00.5 */
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c:100:61: note: in expansion of macro 'PHASE_V_HS'
  100 |     output[1].pin                    = (IfxGtm_Pwm_ToutMap*)PHASE_V_HS;
      |                                                             ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c:37:37: error: 'IfxGtm_TOM1_3_TOUT13_P00_4_OUT' undeclared (first use in this function)
   37 | #define PHASE_V_LS                (&IfxGtm_TOM1_3_TOUT13_P00_4_OUT)  /* V low-side:   TOM1 CH3 -> P00.4 */
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c:101:61: note: in expansion of macro 'PHASE_V_LS'
  101 |     output[1].complementaryPin       = (IfxGtm_Pwm_ToutMap*)PHASE_V_LS;
      |                                                             ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c:38:37: error: 'IfxGtm_TOM1_6_TOUT16_P00_7_OUT' undeclared (first use in this function)
   38 | #define PHASE_W_HS                (&IfxGtm_TOM1_6_TOUT16_P00_7_OUT)  /* W high-side:  TOM1 CH6 -> P00.7 */
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c:107:61: note: in expansion of macro 'PHASE_W_HS'
  107 |     output[2].pin                    = (IfxGtm_Pwm_ToutMap*)PHASE_W_HS;
      |                                                             ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c:39:37: error: 'IfxGtm_TOM1_5_TOUT15_P00_6_OUT' undeclared (first use in this function)
   39 | #define PHASE_W_LS                (&IfxGtm_TOM1_5_TOUT15_P00_6_OUT)  /* W low-side:   TOM1 CH5 -> P00.6 */
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_na2vys63\src\gtm_tom_3_phase_inverter_pwm.c:108:61: note: in expansion of macro 'PHASE_W_LS'
  108 |     output[2].complementaryPin       = (IfxGtm_Pwm_ToutMap*)PHASE_W_LS;
      |                                                             ^~~~~~~~~~
